--- a/style.css
+++ b/style.css
@@ -1,1 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
+root {
+  --cor-principal: rgb (82, 35, 53);
+  --cor-principal: white;
+  --cor--destaque: grey;
+}
+
+body {
+  font-family:'Oswald', sans-serif;
+}
+
+h1, h2, h5 {
+  color var(--cor--secundaria);
+  font-weigth: 400;
+  }
+
+  footer a {
+    color: var(--cor-principal)
+  }
+  
+  footer a:hover {
+    color: var(--cor--destaque)
+  }
+  
