--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 root {
   --cor-principal: rgb (82, 35, 53);
-  --cor-principal: white;
+  --cor-secundaria: white;
   --cor--destaque: grey;
 }
 
